# aicar

./: .gitignore  ENVIRONMENT.md  GIT_STRATEGY.md  PROJECT_STRUCTURE.md  README.md
aicar_sim/: README.md  pyproject.toml  requirements.txt
aicar_sim/config/: sim_config.yaml  wash_recipe_basic.yaml
aicar_sim/schemas/: abstract_nozzle_path_plan.schema.json  collision_safety_plan.schema.json  collision_safety_validation_report.schema.json  continuous_path_profile.schema.json  continuous_path_profile_repair.schema.json  continuous_surface_comparison_report.schema.json  continuous_surface_path_plan.schema.json  continuous_surface_path_plan_repair.schema.json  continuous_surface_repair_report.schema.json  continuous_surface_validation_report.schema.json  coverage_report.schema.json  customer_showcase_report.schema.json  geometry_import_profile.schema.json  geometry_nozzle_pose_plan.schema.json  geometry_pose_comparison_report.schema.json  geometry_pose_validation_report.schema.json  geometry_semantic_map.schema.json  machine_path_plan.schema.json  motion_model.schema.json  motion_validation_report.schema.json  multi_actuator_schedule.schema.json  multi_actuator_system.schema.json  normalized_geometry.schema.json  nozzle_catalog.schema.json  nozzle_coverage_plan.schema.json  nozzle_pose_profile.schema.json  nozzle_zone_mapping.schema.json  optimized_machine_path_plan.schema.json  optimized_multi_actuator_schedule.schema.json  path_optimization_profile.schema.json  path_optimization_report.schema.json  (+11 more)
vehicle_type_lab/: README.md  pyproject.toml  requirements.txt
(+422 files in other folders)
