[project]
name = "aicar-sim"
version = "0.1.0"
description = "Scaffold for AI car wash simulation."
requires-python = ">=3.10"
dependencies = [
  "pygame",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

